Add time format, attendance ResponseEntity<CommonResponse<T>>